--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
 </head>
 <body>
 	<header class="header">
-		
+		<img src="images/headerLogo.svg" alt="logo" class="header__logo">
+		<nav class="header__nav">
+			<ul>
+				<li><a href="#">Study</a></li>
+				<li><a href="#">International</a></li>
+				<li><a href="#">Research</a></li>
+				<li><a href="#">We are Beckett</a></li>
+				<li><a href="#">Business</a></li>
+				<li><a href="#">Covid-19</a></li>
+			</ul>
+		</nav>
+		<button class="header__btn">
+			<img src="images/headerBurger.svg" alt="burger" class="header__burger">
+		</button>
+		<button class="header__btn">
+			<img src="images/headerSearch.svg" alt="search" class="header__search">
+		</button>
 	</header>
 </body>
 </html>
