Styling the mobile version of <header>, defining variables

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 	<header class="header">
-		<img src="images/headerLogo.svg" alt="logo" class="header__logo">
+		<a href="#" class="header__logo">
+			<img src="images/headerLogo.svg" alt="logo">
+		</a>
 		<nav class="header__nav">
 			<ul>
 				<li><a href="#">Study</a></li>
