Cards block markup

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/variables.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/headerStyle.css">
+	<link rel="stylesheet" href="css/cardsStyle.css">
 	<title>Home</title>
 </head>
 <body>
@@ -30,5 +31,118 @@
 			<img src="images/headerSearch.svg" alt="search" class="header__search">
 		</button>
 	</header>
+	<main>
+		<article class="cards">
+			<h2 class="cards__title">CARDS</h2>
+			<section class="card">
+				<div class="card__border"></div>
+				<div class="card__firstPart">
+					<div class="card__imageBlock">
+						<div class="card__degrees">360°</div>
+						<img src="images/cardImage1.jpeg" alt="image1" class="card__image">
+					</div>
+					<div class="card__line"></div>
+				</div>
+				<div class="card__secondPart">
+					<h4 class="card__title">Classic Ensuite</h4>
+					<p class="card__subtitle">BROADCASTING TOWER</p>
+					<div class="card__duration">
+						<img src="images/durationIcon.svg" alt="durationIcon" class="card__durationIcon">
+						<p>43 week + 1 day tenancy</p>
+					</div>
+					<div class="card__cost">
+						<img src="images/costIcon.svg" alt="costIcon" class="card__costIcon">
+						<p>£183.00 per week / £7,894.62 total</p>
+					</div>
+				</div>
+			</section>
+			<section class="card">
+				<div class="card__border"></div>
+				<div class="card__firstPart">
+					<div class="card__imageBlock">
+						<div class="card__degrees">360°</div>
+						<img src="images/cardImage2.jpeg" alt="image1" class="card__image">
+					</div>
+					<div class="card__line"></div>
+				</div>
+				<div class="card__secondPart">
+					<h4 class="card__title">Premium I</h4>
+					<p class="card__subtitle">BROADCASTING TOWER</p>
+					<div class="card__duration">
+						<img src="images/durationIcon.svg" alt="durationIcon" class="card__durationIcon">
+						<p>43 week + 1 day tenancy</p>
+					</div>
+					<div class="card__cost">
+						<img src="images/costIcon.svg" alt="costIcon" class="card__costIcon">
+						<p>£195.00 per week / £8,412.30 total</p>
+					</div>
+				</div>
+			</section>
+			<section class="card">
+				<div class="card__border"></div>
+				<div class="card__firstPart">
+					<div class="card__imageBlock">
+						<div class="card__degrees">360°</div>
+						<img src="images/cardImage3.jpeg" alt="image2" class="card__image">
+					</div>
+					<div class="card__line"></div>
+				</div>
+				<div class="card__secondPart">
+					<h4 class="card__title">Classic Studio</h4>
+					<p class="card__subtitle">BROADCASTING TOWER</p>
+					<div class="card__duration">
+						<img src="images/durationIcon.svg" alt="durationIcon" class="card__durationIcon">
+						<p>43 week + 1 day tenancy</p>
+					</div>
+					<div class="card__cost">
+						<img src="images/costIcon.svg" alt="costIcon" class="card__costIcon">
+						<p>£240.00 per week / £10,353.60 total</p>
+					</div>
+				</div>
+			</section>
+			<section class="card">
+				<div class="card__border"></div>
+				<div class="card__firstPart">
+					<div class="card__imageBlock">
+						<div class="card__degrees">360°</div>
+						<img src="images/cardImage4.jpeg" alt="image3" class="card__image">
+					</div>
+					<div class="card__line"></div>
+				</div>
+				<div class="card__secondPart">
+					<h4 class="card__title">Premium I Studio</h4>
+					<p class="card__subtitle">BROADCASTING TOWER</p>
+					<div class="card__duration">
+						<img src="images/durationIcon.svg" alt="durationIcon" class="card__durationIcon">
+						<p>43 week + 1 day tenancy</p>
+					</div>
+					<div class="card__cost">
+						<img src="images/costIcon.svg" alt="costIcon" class="card__costIcon">
+						<p>£245.00 per week / £10,569.30 total</p>
+					</div>
+				</div>
+			</section>
+			<section class="card">
+				<div class="card__border"></div>
+				<div class="card__firstPart">
+					<div class="card__imageBlock">
+					</div>
+					<div class="card__line"></div>
+				</div>
+				<div class="card__secondPart">
+					<h4 class="card__title">Standard</h4>
+					<p class="card__subtitle">MILL STREET</p>
+					<div class="card__duration">
+						<img src="images/costIcon.svg" alt="costIcon" class="card__costIcon">
+						<p>43 week tenancy</p>
+					</div>
+					<div class="card__cost">
+						<img src="images/costIcon.svg" alt="costIcon" class="card__costIcon">
+						<p>£144.00 per week / £6,192.00 total</p>
+					</div>
+				</div>
+			</section>
+		</article>
+	</main>
 </body>
 </html>
