Adjusting the positioning of <header>

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<img src="images/headerLogo.svg" alt="logo">
 		</a>
 		<nav class="header__nav">
-			<ul>
+			<ul class="header__list">
 				<li><a href="#">Study</a></li>
 				<li><a href="#">International</a></li>
 				<li><a href="#">Research</a></li>
@@ -23,13 +23,13 @@
 				<li><a href="#">Business</a></li>
 				<li><a href="#">Covid-19</a></li>
 			</ul>
+			<button class="header__btn">
+				<img src="images/headerBurger.svg" alt="burger" class="header__burger">
+			</button>
+			<button class="header__btn">
+				<img src="images/headerSearch.svg" alt="search" class="header__search">
+			</button>
 		</nav>
-		<button class="header__btn">
-			<img src="images/headerBurger.svg" alt="burger" class="header__burger">
-		</button>
-		<button class="header__btn">
-			<img src="images/headerSearch.svg" alt="search" class="header__search">
-		</button>
 	</header>
 	<main>
 		<article class="cards">
