Adaptation of post block

--- a/index.html
+++ b/index.html
@@ -124,8 +124,6 @@
 			<section class="card">
 				<div class="card__border"></div>
 				<div class="card__firstPart">
-					<div class="card__imageBlock">
-					</div>
 					<div class="card__line"></div>
 				</div>
 				<div class="card__secondPart">
@@ -150,9 +148,10 @@
 				<div class="post__content">
 					<div class="post__heading">
 						<h3>IPSUM LOREM</h3>
-						<p>SUBHEADING DOLOR</p>
+						<div class="post__dash"></div>
+						<a href="#" class="post__btn">SHOW ME MORE</a>
 					</div>
-					<button class="post__btn">SHOW ME MORE</button>
+					<p>SUBHEADING DOLOR</p>
 					<div class="post__event">
 						<img src="images/eventIcon.svg" alt="eventIcon" class="post__eventIcon">
 						<div class="post__text">
