--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 			<section class="card">
 				<div class="card__border"></div>
 				<div class="card__firstPart">
+					<div class="card__imageBlock">
+					</div>
 					<div class="card__line"></div>
 				</div>
 				<div class="card__secondPart">
